--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); grid-template-rows: auto repeat(6, 1fr); background: var(--line); gap: 1px; flex: 1; border-bottom: 1px solid var(--line); width: 100%; }
 .cal-day-label { background: #fdfdfd; padding: 8px 0; text-align: center; font-size: 13px; font-weight: bold; }
 
-.cal-day { background: #fff; padding: 4px; font-size: 13.2px; cursor: pointer; display: flex; flex-direction: column; gap: 4px; position: relative; overflow: hidden; }
+.cal-day { background: #fff; padding: 4px; font-size: 13.2px; cursor: pointer; display: flex; flex-direction: column; gap: 4px; position: relative; overflow: hidden; font-family: 'NexonLv2Gothic', sans-serif; }
 .cal-day-num-box { display: flex; align-items: center; gap: 4px; }
 .cal-day.sun, .cal-day.holiday { color: red; }
 .cal-day.sat { color: blue; }
 .cal-day.other { color: #ccc !important; background: #fafafa; }
-.cal-day.today { background: #fff; outline: 1px solid #000; outline-offset: -1px; z-index: 1; } 
+.cal-day.today { background: #fff; outline: 1px solid #000; outline-offset: -1px; z-index: 1; }
 
-.holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; }
+.holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; font-family: 'NexonLv2Gothic', sans-serif; }
 .holiday-red { color: red; }
 .holiday-black { color: black; }
 
-.cal-event-container { display: flex; flex-direction: column; gap: 4px; width: 100%; overflow: hidden; } 
+.cal-event-container { display: flex; flex-direction: column; gap: 4px; width: 100%; overflow: hidden; }
 
 .cal-event-item { 
     color: #000; 
@@ -97,7 +97,7 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
     padding: 3px 4px; 
     border-radius: 2px; 
     font-size: 10.8px;
-    line-height: 1.2; 
+    line-height: 1.3; 
     width: 100%;
     display: -webkit-box;
     -webkit-line-clamp: 2; 
@@ -106,7 +106,7 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
     text-overflow: ellipsis;
     word-break: break-all;
     white-space: normal;
-    max-height: 2.4em; 
+    font-family: 'NexonLv2Gothic', sans-serif;
 }
 .cal-event-item.repeated { background-color: #fef9c3; }
 .cal-event-item.multi-day { background-color: #dcfce7; border-left: 2px solid #16a34a; }
@@ -145,7 +145,16 @@ const PASSWORD = "7102";
 
 const holidays = {
     "01-01": { name: "신정", red: true }, "03-01": { name: "삼일절", red: true }, "05-01": { name: "근로자의날", red: false }, "05-05": { name: "어린이날", red: true }, "05-08": { name: "어버이날", red: false }, "06-06": { name: "현충일", red: true }, "08-15": { name: "광복절", red: true }, "10-01": { name: "국군의날", red: false }, "10-03": { name: "개천절", red: true }, "10-09": { name: "한글날", red: true }, "12-25": { name: "성탄절", red: true },
-    "2026-02-16": { name: "설날", red: true }, "2026-02-17": { name: "설날", red: true }, "2026-02-18": { name: "설날", red: true }, "2026-05-24": { name: "부처님오신날", red: true }, "2026-09-24": { name: "추석", red: true }, "2026-09-25": { name: "추석", red: true }, "2026-09-26": { name: "추석", red: true }
+    "2026-02-16": { name: "설날", red: true }, "2026-02-17": { name: "설날", red: true }, "2026-02-18": { name: "설날", red: true }, "2026-05-24": { name: "부처님오신날", red: true }, "2026-09-24": { name: "추석", red: true }, "2026-09-25": { name: "추석", red: true }, "2026-09-26": { name: "추석", red: true },
+    "2027-02-06": { name: "설날", red: true }, "2027-02-07": { name: "설날", red: true }, "2027-02-08": { name: "설날", red: true }, "2027-02-09": { name: "대체공휴일", red: true }, "2027-05-13": { name: "부처님오신날", red: true }, "2027-09-14": { name: "추석", red: true }, "2027-09-15": { name: "추석", red: true }, "2027-09-16": { name: "추석", red: true },
+    "2028-01-26": { name: "설날", red: true }, "2028-01-27": { name: "설날", red: true }, "2028-01-28": { name: "설날", red: true }, "2028-05-02": { name: "부처님오신날", red: true }, "2028-10-02": { name: "추석", red: true }, "2028-10-03": { name: "추석/개천절", red: true }, "2028-10-04": { name: "추석", red: true }, "2028-10-05": { name: "대체공휴일", red: true },
+    "2029-02-12": { name: "설날", red: true }, "2029-02-13": { name: "설날", red: true }, "2029-02-14": { name: "설날", red: true }, "2029-05-20": { name: "부처님오신날", red: true }, "2029-09-21": { name: "추석", red: true }, "2029-09-22": { name: "추석", red: true }, "2029-09-23": { name: "추석", red: true }, "2029-09-24": { name: "대체공휴일", red: true },
+    "2030-02-02": { name: "설날", red: true }, "2030-02-03": { name: "설날", red: true }, "2030-02-04": { name: "설날", red: true }, "2030-05-09": { name: "부처님오신날", red: true }, "2030-09-11": { name: "추석", red: true }, "2030-09-12": { name: "추석", red: true }, "2030-09-13": { name: "추석", red: true },
+    "2031-01-22": { name: "설날", red: true }, "2031-01-23": { name: "설날", red: true }, "2031-01-24": { name: "설날", red: true }, "2031-05-28": { name: "부처님오신날", red: true }, "2031-09-30": { name: "추석", red: true }, "2031-10-01": { name: "추석", red: true }, "2031-10-02": { name: "추석", red: true },
+    "2032-02-10": { name: "설날", red: true }, "2032-02-11": { name: "설날", red: true }, "2032-02-12": { name: "설날", red: true }, "2032-05-16": { name: "부처님오신날", red: true }, "2032-09-18": { name: "추석", red: true }, "2032-09-19": { name: "추석", red: true }, "2032-09-20": { name: "추석", red: true },
+    "2033-01-30": { name: "설날", red: true }, "2033-01-31": { name: "설날", red: true }, "2033-02-01": { name: "설날", red: true }, "2033-05-06": { name: "부처님오신날", red: true }, "2033-09-07": { name: "추석", red: true }, "2033-09-08": { name: "추석", red: true }, "2033-09-09": { name: "추석", red: true },
+    "2034-02-18": { name: "설날", red: true }, "2034-02-19": { name: "설날", red: true }, "2034-02-20": { name: "설날", red: true }, "2034-05-25": { name: "부처님오신날", red: true }, "2034-09-26": { name: "추석", red: true }, "2034-09-27": { name: "추석", red: true }, "2034-09-28": { name: "추석", red: true },
+    "2035-02-07": { name: "설날", red: true }, "2035-02-08": { name: "설날", red: true }, "2035-02-09": { name: "설날", red: true }, "2035-05-15": { name: "부처님오신날", red: true }, "2035-09-15": { name: "추석", red: true }, "2035-09-16": { name: "추석/추석", red: true }, "2035-09-17": { name: "추석", red: true }
 };
 
 let route = { page: "list", id: null, date: null };
@@ -365,11 +374,11 @@ function setEditCal(id) {
 
 function askDeleteCalMode(dateKey, id, isRepeated, repeatId) {
     const m = document.getElementById("pwModal"); m.style.display = "flex";
-    if (isRepeated) {
-        m.innerHTML = `<div class="card" style="text-align:center;"><b>반복 일정 삭제</b><p style="margin-top:10px;">삭제 범위를 선택해주세요.</p>
+    if (isRepeated || (calendarData[dateKey][id] && calendarData[dateKey][id].endDate !== calendarData[dateKey][id].startDate)) {
+        m.innerHTML = `<div class="card" style="text-align:center;"><b>일정 삭제</b><p style="margin-top:10px;">삭제 범위를 선택해주세요.</p>
         <button class="btn-repeat-action" onclick="doDeleteCal('${dateKey}', '${id}')">이 일정만 삭제</button>
         <button class="btn-repeat-action" onclick="doDeleteRepeatRange('${dateKey}', '${repeatId}', 'after')">이 일정과 이후 모든 일정 삭제</button>
-        <button class="btn-repeat-action" onclick="doDeleteRepeatRange('${dateKey}', '${repeatId}', 'all')">연관된 모든 반복 일정 삭제</button>
+        <button class="btn-repeat-action" onclick="doDeleteRepeatRange('${dateKey}', '${repeatId}', 'all')">연관된 모든 일정 삭제</button>
         <button class="fit gray" style="margin-top:10px;" onclick="closeModal()">취소</button></div>`;
     } else {
         m.innerHTML = `<div class="card" style="text-align:center;"><b>일정 삭제</b><p style="margin-top:10px;">이 일정을 삭제할까요?</p><div class="btn-row"><button class="fit red" onclick="doDeleteCal('${dateKey}', '${id}')">삭제</button><button class="fit gray" onclick="closeModal()">취소</button></div></div>`;
@@ -401,21 +410,38 @@ function saveCal(dateKey) {
     const startDate = document.getElementById("calStartDate").value;
     const endDate = document.getElementById("calEndDate").value;
     if(!title) return alert("제목을 입력해주세요.");
+    
     const data = { title, time, content, repeated: repeat, startDate, endDate, isAllDay };
+    
     if (editingCalId) {
-        db.ref(`calendar_v3/${dateKey}/${editingCalId}`).update(data).then(() => { editingCalId = null; render(); });
+        const oldEv = calendarData[dateKey][editingCalId];
+        // 2일 이상 반영된 일정(multi-day) 수정 시 기존 데이터 일괄 삭제 후 재생성 로직
+        if (oldEv.repeatId && (oldEv.endDate !== oldEv.startDate || oldEv.repeated)) {
+            const updates = {};
+            Object.keys(calendarData).forEach(dk => {
+                Object.keys(calendarData[dk]).forEach(ek => {
+                    if(calendarData[dk][ek].repeatId === oldEv.repeatId) updates[`${dk}/${ek}`] = null;
+                });
+            });
+            db.ref("calendar_v3").update(updates).then(() => {
+                createNewCalendarEntry(startDate, endDate, repeat, data, oldEv.repeatId);
+            });
+        } else {
+            db.ref(`calendar_v3/${dateKey}/${editingCalId}`).update(data).then(() => { editingCalId = null; render(); });
+        }
     } else {
         createNewCalendarEntry(startDate, endDate, repeat, data);
     }
 }
 
-function createNewCalendarEntry(startDate, endDate, repeat, data) {
-    const updates = {}; const repeatId = "rep_" + Date.now();
+function createNewCalendarEntry(startDate, endDate, repeat, data, existingRepeatId = null) {
+    const updates = {}; 
+    const repeatId = existingRepeatId || "rep_" + Date.now();
     let start = new Date(startDate); let end = new Date(endDate);
     while(start <= end) {
         const dStr = start.getFullYear() + '-' + String(start.getMonth() + 1).padStart(2, '0') + '-' + String(start.getDate()).padStart(2, '0');
         const newKey = db.ref("calendar_v3/" + dStr).push().key;
-        updates[`${dStr}/${newKey}`] = { ...data, repeatId: (repeat || endDate !== startDate) ? repeatId : "single_" + Date.now() };
+        updates[`${dStr}/${newKey}`] = { ...data, repeatId };
         start.setDate(start.getDate() + 1);
     }
     if (repeat) {
