--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .btn-row button, .btn-row .sms-btn {flex: 1; margin: 0;}
 .view-time-header {font-size: 14px;color: #666;margin-bottom: 10px;text-align: right;}
 
+/* 1. 캘린더 레이아웃 수정: 하단 버튼 상시 노출 */
 .cal-wrapper { background: #fff; height: 100dvh; display: flex; flex-direction: column; overflow: hidden; touch-action: none; position: relative; width: 100%; }
-.cal-container { display: flex; width: 300%; flex: 1; transition: transform 0.3s ease-out; }
+.cal-container { display: flex; width: 300%; flex: 1; min-height: 0; transition: transform 0.3s ease-out; }
 .cal-month-view { width: 33.333%; height: 100%; display: flex; flex-direction: column; }
 
 .cal-header { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; background: #fff; border-bottom: 1px solid var(--line); flex-shrink: 0; }
 .cal-header button { width: 34px !important; height: 34px; padding: 0 !important; font-size: 14px; }
 
 /* 4. 세로 행 높이 고정 */
-.cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); grid-template-rows: auto repeat(6, 110px); background: var(--line); gap: 1px; flex: 1; border-bottom: 1px solid var(--line); width: 100%; overflow: hidden; }
+.cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); grid-template-rows: auto repeat(6, 1fr); background: var(--line); gap: 1px; flex: 1; border-bottom: 1px solid var(--line); width: 100%; overflow: hidden; }
 .cal-day-label { background: #fdfdfd; padding: 8px 0; text-align: center; font-size: 13px; font-weight: bold; }
 
 .cal-day { background: #fff; padding: 4px; font-size: 13.2px; cursor: pointer; display: flex; flex-direction: column; gap: 4px; position: relative; overflow: hidden; font-family: 'NexonLv2Gothic', sans-serif; }
@@ -86,14 +87,14 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .cal-day.other { color: #ccc !important; background: #fafafa; }
 .cal-day.today { background: #fff; outline: 1px solid #000; outline-offset: -1px; z-index: 1; }
 
-/* 3. 공휴일 한줄 표시 */
-.holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; font-family: 'NexonLv2Gothic', sans-serif; margin-left: 2px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 60%; }
+/* 3. 공휴일 점처리 삭제 및 한줄 가득 표시 */
+.holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; font-family: 'NexonLv2Gothic', sans-serif; margin-left: 2px; white-space: nowrap; overflow: hidden; text-overflow: clip; max-width: 75%; }
 .holiday-red { color: red; }
 .holiday-black { color: black; }
 
 .cal-event-container { display: flex; flex-direction: column; gap: 2px; width: 100%; overflow: hidden; }
 
-/* 1, 2. 일정 제목 3개 제한 및 글자 배경 세로폭 최적화 */
+/* 1, 2, 3. 일정 제목 점처리 삭제 및 최대한 보이기 */
 .cal-event-item { 
     color: #000; 
     background-color: #eef2ff; 
@@ -102,20 +103,19 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
     font-size: 10.8px;
     line-height: 1.1; 
     width: 100%;
-    display: -webkit-box;
-    -webkit-line-clamp: 2; 
-    -webkit-box-orient: vertical;
+    display: block; 
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: clip; 
     word-break: break-all;
-    white-space: normal;
+    white-space: nowrap; 
     font-family: 'NexonLv2Gothic', sans-serif;
 }
 
-/* 2. 4개 이상의 일정일 때 한줄 처리 */
+/* 4개 이상의 일정일 때 한줄 처리 */
 .many-events .cal-event-item {
-    -webkit-line-clamp: 1;
-    max-height: 1.2em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
 }
 
 .cal-event-item.repeated { background-color: #fef9c3; }
@@ -341,15 +341,12 @@ function renderDayCell(y, m, d, isOther) {
     let events = calendarData[dateKey] ? Object.values(calendarData[dateKey]) : [];
     events.sort((a, b) => (a.time || "00:00").localeCompare(b.time || "00:00"));
 
-    /* 2. 일정 3개 제한 로직 */
     const isMany = events.length >= 4;
-    const displayEvents = isMany ? events : events; // 3개까지가 아니라 4개부터 모든 제목 한줄 처리
     const cellCls = isMany ? 'many-events' : '';
 
-    return `<div class="cal-day ${cls} ${cellCls}" onclick="editingCalId=null; navigate({page:'calDetail', date:'${dateKey}'})"><div class="cal-day-num-box"><b style="font-size:13.2px;">${d}</b>${holiday ? `<span class="holiday-text ${holiday.red ? 'holiday-red' : 'holiday-black'}">${holiday.name}</span>` : ''}</div><div class="cal-event-container">${displayEvents.map(ev => `<div class="cal-event-item ${ev.repeated ? 'repeated' : ''} ${ev.endDate && ev.endDate !== ev.startDate ? 'multi-day' : ''}">${esc(ev.title)}</div>`).join('')}</div></div>`;
+    return `<div class="cal-day ${cls} ${cellCls}" onclick="editingCalId=null; navigate({page:'calDetail', date:'${dateKey}'})"><div class="cal-day-num-box"><b style="font-size:13.2px;">${d}</b>${holiday ? `<span class="holiday-text ${holiday.red ? 'holiday-red' : 'holiday-black'}">${holiday.name}</span>` : ''}</div><div class="cal-event-container">${events.map(ev => `<div class="cal-event-item ${ev.repeated ? 'repeated' : ''} ${ev.endDate && ev.endDate !== ev.startDate ? 'multi-day' : ''}">${esc(ev.title)}</div>`).join('')}</div></div>`;
 }
 
-/* 1, 2. 하루종일 체크 위치 및 초기화 문제 해결 */
 function renderCalendarDetail(container) {
     const dateKey = route.date;
     let events = calendarData[dateKey] ? Object.entries(calendarData[dateKey]) : [];
@@ -364,7 +361,7 @@ function renderCalendarDetail(container) {
         editContent = target.content; 
         isRepeated = target.repeated || false; 
         editEndDate = target.endDate || dateKey; 
-        isAllDay = target.isAllDay || false; // 여기서 수정 페이지의 체크 여부 결정
+        isAllDay = target.isAllDay || false; 
         editStartDate = target.startDate || dateKey;
     }
     
@@ -394,7 +391,6 @@ function renderCalendarDetail(container) {
     }).join('') || '<p style="color:#999; font-size:14px;">저장된 일정이 없습니다.</p>'}<button class="gray" style="margin-top:10px;" onclick="editingCalId=null; navigate({page:'calendar'})">뒤로가기</button></div>`;
 }
 
-/* 2. 하루종일 체크 시 내용 보존을 위해 스타일만 조작 */
 function toggleTimeInput(isAllDay) { 
     const wrapper = document.getElementById('timeInputWrapper');
     if(wrapper) wrapper.style.display = isAllDay ? 'none' : 'block';
@@ -411,7 +407,6 @@ function setEditCal(id) {
     editingCalId = id; render(); 
 }
 
-/* 4. 기간 설정 일정도 단일 일정과 동일하게 기능 및 UI 반영 (즉시 삭제 팝업) */
 function askDeleteCalMode(dateKey, id, isRepeated, repeatId) {
     const m = document.getElementById("pwModal"); m.style.display = "flex";
     if (isRepeated) {
