--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .btn-row button, .btn-row .sms-btn {flex: 1; margin: 0;}
 .view-time-header {font-size: 14px;color: #666;margin-bottom: 10px;text-align: right;}
 
-/* 1. 캘린더 레이아웃 수정: 하단 버튼 상시 노출 */
+/* 1. 하단 버튼 상시 노출을 위한 구조 강화 */
 .cal-wrapper { background: #fff; height: 100dvh; display: flex; flex-direction: column; overflow: hidden; touch-action: none; position: relative; width: 100%; }
 .cal-container { display: flex; width: 300%; flex: 1; min-height: 0; transition: transform 0.3s ease-out; }
 .cal-month-view { width: 33.333%; height: 100%; display: flex; flex-direction: column; }
@@ -87,14 +87,14 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .cal-day.other { color: #ccc !important; background: #fafafa; }
 .cal-day.today { background: #fff; outline: 1px solid #000; outline-offset: -1px; z-index: 1; }
 
-/* 3. 공휴일 점처리 삭제 및 한줄 가득 표시 */
-.holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; font-family: 'NexonLv2Gothic', sans-serif; margin-left: 2px; white-space: nowrap; overflow: hidden; text-overflow: clip; max-width: 75%; }
+/* 2. 공휴일 점처리 삭제 및 가독성 확장 */
+.holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; font-family: 'NexonLv2Gothic', sans-serif; margin-left: 2px; white-space: nowrap; overflow: hidden; text-overflow: clip; max-width: 85%; }
 .holiday-red { color: red; }
 .holiday-black { color: black; }
 
 .cal-event-container { display: flex; flex-direction: column; gap: 2px; width: 100%; overflow: hidden; }
 
-/* 1, 2, 3. 일정 제목 점처리 삭제 및 최대한 보이기 */
+/* 3. 일정 제목 점처리 삭제 및 최대한 보이기 */
 .cal-event-item { 
     color: #000; 
     background-color: #eef2ff; 
@@ -111,7 +111,7 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
     font-family: 'NexonLv2Gothic', sans-serif;
 }
 
-/* 4개 이상의 일정일 때 한줄 처리 */
+/* 4개 이상의 일정일 때 한줄 처리 유지 */
 .many-events .cal-event-item {
     white-space: nowrap;
     overflow: hidden;
@@ -123,7 +123,7 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 
 .btn-repeat-action { background: #fff !important; color: #000 !important; border: 1px solid var(--line) !important; margin: 4px 0 !important; font-weight: 500 !important; width: 100%; }
 
-.cal-footer { padding: 10px 15px; background: #fff; flex-shrink: 0; border-top: 1px solid var(--line); }
+.cal-footer { padding: 10px 15px; background: #fff; flex-shrink: 0; border-top: 1px solid var(--line); z-index: 10; }
 
 .flex-align-center { display: flex; align-items: center; gap: 8px; margin-top: 10px; }
 .flex-align-center input[type="checkbox"] { width: 18px; height: 18px; margin: 0; cursor: pointer; }
