--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .btn-row button, .btn-row .sms-btn {flex: 1; margin: 0;}
 .view-time-header {font-size: 14px;color: #666;margin-bottom: 10px;text-align: right;}
 
-/* 1. 하단 버튼 상시 노출을 위한 구조 강화 */
+/* 캘린더 레이아웃 수정 */
 .cal-wrapper { background: #fff; height: 100dvh; display: flex; flex-direction: column; overflow: hidden; touch-action: none; position: relative; width: 100%; }
 .cal-container { display: flex; width: 300%; flex: 1; min-height: 0; transition: transform 0.3s ease-out; }
 .cal-month-view { width: 33.333%; height: 100%; display: flex; flex-direction: column; }
@@ -76,7 +76,6 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .cal-header { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; background: #fff; border-bottom: 1px solid var(--line); flex-shrink: 0; }
 .cal-header button { width: 34px !important; height: 34px; padding: 0 !important; font-size: 14px; }
 
-/* 4. 세로 행 높이 고정 */
 .cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); grid-template-rows: auto repeat(6, 1fr); background: var(--line); gap: 1px; flex: 1; border-bottom: 1px solid var(--line); width: 100%; overflow: hidden; }
 .cal-day-label { background: #fdfdfd; padding: 8px 0; text-align: center; font-size: 13px; font-weight: bold; }
 
@@ -87,14 +86,13 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .cal-day.other { color: #ccc !important; background: #fafafa; }
 .cal-day.today { background: #fff; outline: 1px solid #000; outline-offset: -1px; z-index: 1; }
 
-/* 2. 공휴일 점처리 삭제 및 가독성 확장 */
-.holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; font-family: 'NexonLv2Gothic', sans-serif; margin-left: 2px; white-space: nowrap; overflow: hidden; text-overflow: clip; max-width: 85%; }
+.holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; font-family: 'NexonLv2Gothic', sans-serif; margin-left: 2px; white-space: nowrap; overflow: hidden; text-overflow: clip; max-width: 75%; }
 .holiday-red { color: red; }
 .holiday-black { color: black; }
 
-.cal-event-container { display: flex; flex-direction: column; gap: 2px; width: 100%; overflow: hidden; }
+.cal-event-container { display: flex; flex-direction: column; gap: 2px; width: 100%; overflow: hidden; flex: 1; }
 
-/* 3. 일정 제목 점처리 삭제 및 최대한 보이기 */
+/* 일정 스타일 수정 */
 .cal-event-item { 
     color: #000; 
     background-color: #eef2ff; 
@@ -105,17 +103,20 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
     width: 100%;
     display: block; 
     overflow: hidden;
-    text-overflow: clip; 
     word-break: break-all;
-    white-space: nowrap; 
-    font-family: 'NexonLv2Gothic', sans-serif;
+    white-space: normal; /* 기본은 2줄 허용 */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
-/* 4개 이상의 일정일 때 한줄 처리 유지 */
+/* 4개 이상일 때 스타일 강제 적용 */
 .many-events .cal-event-item {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: clip;
+    -webkit-line-clamp: 1;
+    display: block;
 }
 
 .cal-event-item.repeated { background-color: #fef9c3; }
@@ -123,7 +124,7 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 
 .btn-repeat-action { background: #fff !important; color: #000 !important; border: 1px solid var(--line) !important; margin: 4px 0 !important; font-weight: 500 !important; width: 100%; }
 
-.cal-footer { padding: 10px 15px; background: #fff; flex-shrink: 0; border-top: 1px solid var(--line); z-index: 10; }
+.cal-footer { padding: 10px 15px; background: #fff; flex-shrink: 0; border-top: 1px solid var(--line); }
 
 .flex-align-center { display: flex; align-items: center; gap: 8px; margin-top: 10px; }
 .flex-align-center input[type="checkbox"] { width: 18px; height: 18px; margin: 0; cursor: pointer; }
@@ -341,8 +342,8 @@ function renderDayCell(y, m, d, isOther) {
     let events = calendarData[dateKey] ? Object.values(calendarData[dateKey]) : [];
     events.sort((a, b) => (a.time || "00:00").localeCompare(b.time || "00:00"));
 
-    const isMany = events.length >= 4;
-    const cellCls = isMany ? 'many-events' : '';
+    // 4개 이상의 일정일 때 클래스 부여 (CSS 제어용)
+    const cellCls = events.length >= 4 ? 'many-events' : '';
 
     return `<div class="cal-day ${cls} ${cellCls}" onclick="editingCalId=null; navigate({page:'calDetail', date:'${dateKey}'})"><div class="cal-day-num-box"><b style="font-size:13.2px;">${d}</b>${holiday ? `<span class="holiday-text ${holiday.red ? 'holiday-red' : 'holiday-black'}">${holiday.name}</span>` : ''}</div><div class="cal-event-container">${events.map(ev => `<div class="cal-event-item ${ev.repeated ? 'repeated' : ''} ${ev.endDate && ev.endDate !== ev.startDate ? 'multi-day' : ''}">${esc(ev.title)}</div>`).join('')}</div></div>`;
 }
@@ -409,19 +410,42 @@ function setEditCal(id) {
 
 function askDeleteCalMode(dateKey, id, isRepeated, repeatId) {
     const m = document.getElementById("pwModal"); m.style.display = "flex";
+    const ev = calendarData[dateKey][id];
+    const isMultiDay = ev.endDate && ev.endDate !== ev.startDate;
+
     if (isRepeated) {
         m.innerHTML = `<div class="card" style="text-align:center;"><b>반복 일정 삭제</b><p style="margin-top:10px;">삭제 범위를 선택해주세요.</p>
         <button class="btn-repeat-action" onclick="doDeleteCal('${dateKey}', '${id}')">이 일정만 삭제</button>
         <button class="btn-repeat-action" onclick="doDeleteRepeatRange('${dateKey}', '${repeatId}', 'after')">이 일정과 이후 모든 일정 삭제</button>
         <button class="btn-repeat-action" onclick="doDeleteRepeatRange('${dateKey}', '${repeatId}', 'all')">연관된 모든 일정 삭제</button>
         <button class="fit gray" style="margin-top:10px;" onclick="closeModal()">취소</button></div>`;
+    } else if (isMultiDay) {
+        // 2일 이상의 일정도 한꺼번에 삭제되도록 안내
+        m.innerHTML = `<div class="card" style="text-align:center;"><b>기간 일정 삭제</b><p style="margin-top:10px;">연결된 모든 기간의 일정이 함께 삭제됩니다.<br>삭제할까요?</p><div class="btn-row"><button class="fit red" onclick="doDeleteCal('${dateKey}', '${id}')">전체 삭제</button><button class="fit gray" onclick="closeModal()">취소</button></div></div>`;
     } else {
         m.innerHTML = `<div class="card" style="text-align:center;"><b>일정 삭제</b><p style="margin-top:10px;">이 일정을 삭제할까요?</p><div class="btn-row"><button class="fit red" onclick="doDeleteCal('${dateKey}', '${id}')">삭제</button><button class="fit gray" onclick="closeModal()">취소</button></div></div>`;
     }
 }
 
 function closeModal() { document.getElementById("pwModal").style.display = "none"; }
-function doDeleteCal(dateKey, id) { db.ref(`calendar_v3/${dateKey}/${id}`).remove().then(() => { closeModal(); editingCalId = null; render(); }); }
+
+// 2일 이상 일정의 경우 repeatId를 통해 전체 삭제 반영
+function doDeleteCal(dateKey, id) { 
+    const ev = calendarData[dateKey][id];
+    if (ev.repeatId && !ev.repeated) {
+        // 기간 일정인 경우 (반복은 아니지만 repeatId가 있음)
+        const updates = {};
+        Object.keys(calendarData).forEach(dk => {
+            Object.keys(calendarData[dk]).forEach(ek => {
+                if(calendarData[dk][ek].repeatId === ev.repeatId) updates[`${dk}/${ek}`] = null;
+            });
+        });
+        db.ref("calendar_v3").update(updates).then(() => { closeModal(); editingCalId = null; render(); });
+    } else {
+        // 단일 일정
+        db.ref(`calendar_v3/${dateKey}/${id}`).remove().then(() => { closeModal(); editingCalId = null; render(); }); 
+    }
+}
 
 function doDeleteRepeatRange(currentDate, repeatId, mode) {
     const updates = {};
@@ -450,7 +474,7 @@ function saveCal(dateKey) {
     
     if (editingCalId) {
         const oldEv = calendarData[dateKey][editingCalId];
-        if (oldEv.repeatId && (oldEv.endDate !== oldEv.startDate || oldEv.repeated)) {
+        if (oldEv.repeatId) {
             const updates = {};
             Object.keys(calendarData).forEach(dk => {
                 Object.keys(calendarData[dk]).forEach(ek => {
