--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ function submit(){
   const pl = document.getElementById("pl").value.trim();
   const newPost = { id: Date.now().toString(), title:t, purpose:p, plan:pl, cost:rawC, time:now(), mom: "pending", dad: "pending", momC: "", dadC: "", momTime: "", dadTime: "" };
   db.ref("approvals").push(newPost).then(() => {
-    const msg = `[똑똑! 가족게시판]\n아이의 의견이 접수되었습니다\n\n제목 : ${t}\n금액 : ${Number(rawC).toLocaleString()}원`;
+    const msg = `[똑똑! 가족게시판]\n아이의 의견이 등록되었습니다!
     const m = document.getElementById("pwModal");
     m.style.display = "flex";
     m.innerHTML = `<div class="card" style="text-align:center;"><b style="font-size:18px; display:block; margin-bottom:10px;">✅ 상신 완료</b><p style="color:#666; margin-bottom:20px;">가족들에게 문자를 보낼까요?</p><div class="btn-row"><a class="sms-btn" href="${getSmsUrl(msg)}" onclick="document.getElementById('pwModal').style.display='none'; navigate({page:'list'});">문자 보내기</a><button class="gray" onclick="document.getElementById('pwModal').style.display='none'; navigate({page:'list'});">그냥 닫기</button></div></div>`;
@@ -486,7 +486,7 @@ function decide(dbId, who, val, isEdit = false){
     if(who === 'mom') tempParentInput.momC = ""; else tempParentInput.dadC = "";
     db.ref("approvals/"+dbId).update({ [who]: val, [who+"C"]: comment, [who+"Time"]: now() }).then(() => {
         const whoKo = (who === 'mom' ? '엄마' : '아빠');
-        const msg = isEdit ? `[똑똑! 가족 게시판]\n${whoKo}의 의견이 수정되었습니다!` : `[똑똑! 가족 게시판]\n${whoKo}의 의견이 등록되었습니다`;
+        const msg = isEdit ? `[똑똑! 가족 게시판]\n${whoKo}의 의견이 수정되었습니다!` : `[똑똑! 가족 게시판]\n${whoKo}의 의견이 등록되었습니다!`;
         const m = document.getElementById("pwModal"); m.style.display = "flex";
         m.innerHTML = `<div class="card" style="text-align:center;"><b style="font-size:18px; display:block; margin-bottom:10px;">✅ 처리 완료</b><p style="color:#666; margin-bottom:20px;">가족들에게 문자로 알릴까요?</p><div class="btn-row"><a class="sms-btn" href="${getSmsUrl(msg)}" onclick="document.getElementById('pwModal').style.display='none'; navigate({page:'list'});">문자 보내기</a><button class="gray" onclick="document.getElementById('pwModal').style.display='none'; navigate({page:'list'});">그냥 닫기</button></div></div>`;
     });
@@ -504,3 +504,4 @@ history.replaceState({page:'list'}, "");
 </script>
 </body>
 </html>
+
