--- a/index.html
+++ b/index.html
@@ -68,35 +68,28 @@ td.title{text-align:left; line-height:1.35; word-break: break-all;}
 .btn-row button, .btn-row .sms-btn {flex: 1; margin: 0;}
 .view-time-header {font-size: 14px;color: #666;margin-bottom: 10px;text-align: right;}
 
-/* 캘린더 레이아웃 통합 및 세로선 제거 반영 */
+/* 캘린더 레이아웃: (추가 3.5) 기존대로 사용하기 위해 격자선 복구 */
 .cal-wrapper { background: #fff; height: 100dvh; display: flex; flex-direction: column; overflow: hidden; touch-action: none; position: relative; width: 100%; }
 .cal-container { display: flex; width: 300%; flex: 1; min-height: 0; transition: transform 0.3s ease-out; }
 .cal-month-view { width: 33.333%; height: 100%; display: flex; flex-direction: column; }
 .cal-header { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; background: #fff; border-bottom: 1px solid var(--line); flex-shrink: 0; }
 .cal-header button { width: 34px !important; height: 34px; padding: 0 !important; font-size: 14px; }
-
-/* (추가 3.4 반영) 세로 선 제거를 위해 gap을 0으로 설정하고 테두리 스타일을 셀 내부로 이동 */
-.cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); grid-template-rows: auto repeat(6, 1fr); background: #fff; gap: 0px; flex: 1; border-bottom: 1px solid var(--line); width: 100%; overflow: hidden; border-left: 1px solid var(--line); }
-.cal-day-label { background: #fdfdfd; padding: 8px 0; text-align: center; font-size: 13px; font-weight: bold; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); }
-.cal-day { background: #fff; padding: 4px; font-size: 13.2px; cursor: pointer; display: flex; flex-direction: column; gap: 4px; position: relative; overflow: visible; font-family: 'NexonLv2Gothic', sans-serif; border-right: 1px solid var(--line); border-bottom: 1px solid var(--line); }
+.cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); grid-template-rows: auto repeat(6, 1fr); background: var(--line); gap: 1px; flex: 1; border-bottom: 1px solid var(--line); width: 100%; overflow: hidden; }
+.cal-day-label { background: #fdfdfd; padding: 8px 0; text-align: center; font-size: 13px; font-weight: bold; }
+.cal-day { background: #fff; padding: 4px; font-size: 13.2px; cursor: pointer; display: flex; flex-direction: column; gap: 4px; position: relative; overflow: hidden; font-family: 'NexonLv2Gothic', sans-serif; }
 .cal-day-num-box { display: flex; align-items: center; gap: 4px; }
 .cal-day.sun, .cal-day.holiday { color: red; }
 .cal-day.sat { color: blue; }
 .cal-day.other { color: #ccc !important; background: #fafafa; }
-.cal-day.today { background: #fff; outline: 1px solid #000; outline-offset: -1px; z-index: 5; }
+.cal-day.today { background: #fff; outline: 1px solid #000; outline-offset: -1px; z-index: 1; }
 .holiday-text { font-size: 10.8px; font-weight: bold; line-height: 1; display: inline-block; font-family: 'NexonLv2Gothic', sans-serif; margin-left: 2px; white-space: nowrap; overflow: hidden; text-overflow: clip; max-width: 75%; }
 .holiday-red { color: red; }
 .holiday-black { color: black; }
-.cal-event-container { display: flex; flex-direction: column; gap: 2px; width: 100%; overflow: visible; flex: 1; }
+.cal-event-container { display: flex; flex-direction: column; gap: 2px; width: 100%; overflow: hidden; flex: 1; }
 
-/* (추가 1.4 반영) 일정 제목 2줄 표시 및 점 없이 자연스럽게 짤리게 수정 */
+/* (추가 1.5) 일정 제목 2줄 표시 및 점 없이 자연스럽게 잘림 반영 */
 .cal-event-item { color: #000; background-color: #eef2ff; padding: 1px 4px; border-radius: 2px; font-size: 10.8px; line-height: 1.1; width: 100%; display: block; overflow: hidden; word-break: break-all; white-space: normal; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; text-overflow: clip; }
 .many-events .cal-event-item { -webkit-line-clamp: 1; }
-
-/* (추가 3.4 반영) 기간 일정 스타일: 여백을 제거하고 좌우가 이어지도록 하나의 띠 형태 구현 */
-.cal-event-item.multi-start { border-top-right-radius: 0; border-bottom-right-radius: 0; margin-right: -5px; width: calc(100% + 5px); position: relative; z-index: 2; }
-.cal-event-item.multi-mid { border-radius: 0; margin-left: -5px; margin-right: -5px; width: calc(100% + 10px); position: relative; z-index: 1; }
-.cal-event-item.multi-end { border-top-left-radius: 0; border-bottom-left-radius: 0; margin-left: -5px; width: calc(100% + 5px); position: relative; z-index: 2; }
 
 .cal-event-item.repeated { background-color: #fef9c3; }
 .cal-event-item.multi-day { background-color: #dcfce7; }
@@ -348,14 +341,10 @@ function renderDayCell(y, m, d, isOther) {
     events.sort((a, b) => (a.time || "00:00").localeCompare(b.time || "00:00"));
     const cellCls = events.length >= 4 ? 'many-events' : '';
     
-    // (추가 3.4 반영) 기간 일정 통합 표시를 위한 띠 로직 적용
     const eventHtml = events.map(ev => {
         let multiCls = "";
         if(ev.endDate && ev.endDate !== ev.startDate) {
             multiCls = "multi-day ";
-            if(dateKey === ev.startDate) multiCls += "multi-start";
-            else if(dateKey === ev.endDate) multiCls += "multi-end";
-            else multiCls += "multi-mid";
         }
         return `<div class="cal-event-item ${ev.repeated ? 'repeated' : ''} ${multiCls}">${esc(ev.title)}</div>`;
     }).join('');
